Adding User Model with APIs
