# src/types/requests/user.request.ts
@@ -1,0 +1,5 @@
+export interface IUserRegisterRequest {
+    name: string,
+    email: string,
+    password: string,
+}
